Reset menu to develop for developing

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "php": "^7.1",
     "twig/twig": "^1.28 || ^2.0",
     "symfony/templating": "^4.0",
-    "disjfa/menu-bundle": "^0.1.1"
+    "disjfa/menu-bundle": "dev-master"
   },
   "autoload": {
     "psr-4": {
