--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^8.1|^8.2",
         "twig/twig": "^1|^2|^3",
         "symfony/templating": "^4|^5",
         "disjfa/menu-bundle": "^0",
