--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     ],
     "require": {
         "php": "^8.1|^8.2",
-        "twig/twig": "^1|^2|^3",
-        "symfony/templating": "^4|^5",
-        "disjfa/menu-bundle": "^0",
+        "twig/twig": "^3",
+        "symfony/templating": "^5|^6",
+        "disjfa/menu-bundle": "*",
         "symfony/webpack-encore-bundle": "^1.6"
     },
     "autoload": {
